Feat: init redis-publisher

--- a/redis-publisher/pom.xml
+++ b/redis-publisher/pom.xml
@@ -12,14 +12,14 @@
 	<artifactId>redis-publisher</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>redis-publisher</name>
-	<description>Demo project for Spring Boot with Redis messaging</description>
+	<description>Demo project for Spring Boot with Redis pub sub</description>
 	<properties>
 		<java.version>16</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-redis-reactive</artifactId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -34,11 +34,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>io.projectreactor</groupId>
-			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
