Fix: wrong host name

--- a/redis-publisher/src/main/resources/application.yml
+++ b/redis-publisher/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 redis:
   config:
-    host: hostname
+    host: localhost
     port: 6379
     databaseIndex: 4
     channel: pubsub:florian935-product-channel
